Black hole notebook update, not yet complete

--- a/_02_Variable_Stars/Variable_Stars.ipynb
+++ b/_02_Variable_Stars/Variable_Stars.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# <u>Variable Stars</u>\n",
-    "#### Written by Chien-Hsiu Li, NOAO\n",
+    "#### Written by Chien-Hsiu Lee, NOAO\n",
     "\n",
     "In this activity we are going to look at stars that change their magnitudes (brightness) in time. We can use a certain group of these stars to help estimate distances to other astronomical objects such as M31, our neighboring galaxy."
    ]
@@ -421,21 +421,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
