--- a/_04_Galactic_Neighborhood/Galactic_Neighborhood.ipynb
+++ b/_04_Galactic_Neighborhood/Galactic_Neighborhood.ipynb
@@ -73,7 +73,11 @@
     "<img src=\"classical_sats_orbits_withLMC.png\", width=500>\n",
     "<figcaption> The orbits of 10 classical MW satellites backwards in time. The y-axis shows your position relative to the center of the Galaxy and the x-axis shows you time in Gigayears (a billion years).\n",
     "<b>Image Credit:</b> Ekta Patel </figcaption>\n",
+    "</center>\n",
+    "</figure>\n",
     "\n",
+    "<figure>\n",
+    "<center>\n",
     "<img src=\"classical_sats_3D_orbits_faceon_new_zoom.png\", width=700>\n",
     "<figcaption> The locations of 10 classical MW satellites today (dots) and their past orbits (lines) from a different perspective. \n",
     "<b>Image Credit:</b> Ekta Patel </figcaption>\n",
