Black Hole Notebook

--- a/_06_Black_Holes/Black_Holes.ipynb
+++ b/_06_Black_Holes/Black_Holes.ipynb
@@ -653,13 +653,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Enter the value of the peak flux from the graph (replace the number 1.0)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<b><font color='red'>Click into the cell below, read the comments on top, and hit Shift+Return to run the cell.</font></b>"
    ]
   },
@@ -673,7 +666,12 @@
    },
    "outputs": [],
    "source": [
-    "peak_flux = 4.5 * 1e-2 * u.ph *(u.m**-2) *u.second**-1   #in units of 10^-2 photons/second/square meter\n",
+    "# Replace the '1.0' value below with that of the peak flux from the graph.\n",
+    "# Run this cell to calculate peak photon flux.\n",
+    "\n",
+    "\n",
+    "\n",
+    "peak_flux = 1.0 * 1e-2 * u.ph *(u.m**-2) *u.second**-1   #in units of 10^-2 photons/second/square meter\n",
     "print('Peak photon flux is',peak_flux.value,'photons per second per square meters')"
    ]
   },
@@ -695,9 +693,7 @@
     "\n",
     "The distance to 3C279 is about $4 \\times 10^9 light years$, and there are $9.5 \\times 10^{15} m$ in a light year. The surface area of a sphere is $A= 4πr^2$ where $r$ is the radius of the sphere.\n",
     "\n",
-    "#### The function below will apply the conversion to go from photon flux to energy flux (energy per second per square meter) to luminosity (total energy emitted per second). \n",
-    "\n",
-    "<b><font color='red'>Hit Shift+Return to compile the function so that we can call it later.</font></b>"
+    "#### The function below will apply the conversion to go from photon flux to energy flux (energy per second per square meter) to luminosity (total energy emitted per second). "
    ]
   },
   {
@@ -715,6 +711,10 @@
    },
    "outputs": [],
    "source": [
+    "# Run this cell to define a function that will convert between values.\n",
+    "\n",
+    "\n",
+    "\n",
     "def compute_lum(peak_flux):\n",
     "    #convert from photon flux to energy flux in Gev/square-meter/second\n",
     "    peak_energy_flux = peak_flux* 1.*u.GeV/u.ph\n",
@@ -787,6 +787,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run this cell to calculate the ratio of the luminosity at the flare maximum to the solar luminosity.\n",
+    "\n",
+    "\n",
+    "\n",
     "Luminosity_rel_to_Sun = compute_lum(peak_flux)\n",
     "print('Relative to the Sun, the luminosity is',Luminosity_rel_to_Sun,'times brighter.')\n",
     "print(\"*** That's \",np.round(Luminosity_rel_to_Sun / 1e12,1),\"trillion times brighter than the Sun! ***\")"
@@ -814,6 +818,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run this cell to calculate the number of years.\n",
+    "\n",
+    "\n",
+    "\n",
     "Luminosity_Sun = 4e26 *u.J/u.second\n",
     "Energy_flare = Luminosity_rel_to_Sun * Luminosity_Sun * 1*u.second #Energy from flare in 1 second\n",
     "time_Sun = Energy_flare / Luminosity_Sun\n",
