Final version (for now)

--- a/_06_Black_Holes/Black_Holes.ipynb
+++ b/_06_Black_Holes/Black_Holes.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "## How do we find Black Holes?\n",
     "\n",
-    "We cannot *see* black holes directly because no light comes out of them. However, we can find them because their gravitational pull affects anything that comes close. For instance, we can use telescopes to observe stars orbiting around them, such as the supermassive black hole _Sagittarius A*_ (pronouced A-star) at the center of our galaxy. The animation below shows the stars as they go around the center of the galaxy. We cannot see much of what they are orbiting around, but from the shape and speeds of the orbit, astronomers were able to calculate that the central dark object has a mass between 3 and 4 million times that of the Sun. Because that's a lot of mass in this small space, the only possible explanation is a supermassive black hole.\n",
+    "We cannot *see* black holes directly because no light comes out of them. However, we can find them because their gravitational pull affects anything that comes close. For instance, we can use telescopes to observe stars orbiting around them, such as the supermassive black hole _Sagittarius A*_ (pronounced A-star) at the center of our galaxy. The animation below shows the stars as they go around the center of the galaxy. We cannot see much of what they are orbiting around, but from the shape and speeds of the orbit, astronomers were able to calculate that the central dark object has a mass between 3 and 4 million times that of the Sun. Because that's a lot of mass in this small space, the only possible explanation is a supermassive black hole.\n",
     "\n",
     "<br>\n",
     "<figure>\n",
@@ -438,9 +438,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### The vertical axis plots the photon flux (as described above). The horizontal axis plots the day of the year in 1991. For example, the 180th day in 1991 was the 29th of June."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The lines sticking out from the dots are known as error bars. They give the uncertainty in a measurement. For example, if the instrument used to measure the photon flux is not very accurate, it will have large error bars."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <b><font color='blue'>Q: How long did the flare last?</font></b>\n",
     "\n",
-    "Compute separately the <i>rising time</i>, and the <i>dropping time</i> with the graph below by adjusting the sliders."
+    "Compute separately the <i>rising time</i>, and the <i>dropping time</i> by adjusting the sliders in the following graph. The graph will appear after initializing the next two cells."
    ]
   },
   {
@@ -775,13 +789,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b><font color='red'>Click into the cell below, read the comments on top, and hit Shift+Return to run the cell.</font></b>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -867,13 +874,6 @@
     "\n",
     "<b><font color='red'>Hit Shift+Return in the cell below to calculate the ratio of the luminosity at the flare maximum to the Milky Way galaxy luminosity.</font></b>\n",
     "(<b>Hint</b>: The Milky Way is about as luminous as 30 billion Suns)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b><font color='red'>Click into the cell below, read the comments on top, and hit Shift+Return to run the cell.</font></b>"
    ]
   },
   {
