deleted extra cells

--- a/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
+++ b/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
@@ -463,7 +463,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -816,20 +816,6 @@
    "source": [
     "HINT: for more color maps, you can look at this reference <a href=http://matplotlib.org/examples/color/colormaps_reference.html>page</a>. For example, you can replace \"rainbow\" with \"autumn_r\"."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
