Implementing same format as Large Scale notebook

--- a/_06_Black_Holes/Black_Holes.ipynb
+++ b/_06_Black_Holes/Black_Holes.ipynb
@@ -4,18 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <u><b>Black Holes and the Fate of Galaxies</b></u>\n",
+    "# Black Holes and the Fate of Galaxies\n",
     "\n",
-    "#### Written by Stéphanie Juneau, National Optical Astronomy Observatory, and Elliot Kisiel, University of Arizona\n",
+    "##### Written by Stéphanie Juneau, National Optical Astronomy Observatory, and Elliot Kisiel, University of Arizona\n",
     "\n",
-    "Black holes are among the most mysterious objects in our universe. What are they? How do we find them? You will get to learn about different kinds of black holes, and apply research tools to discover their telltale signatures in astronomical observations. As the power-engine of quasars (which themselves are bright beacons that we can see far in the universe), you will learn how the largest black holes might change the fate of the galaxies they live in."
+    "Black holes are among the most mysterious objects in our universe. What are they? How do we find them? You will get to learn about different kinds of black holes, and apply research tools to discover their telltale signatures in astronomical observations. As the power-engine of quasars (which themselves are bright beacons that we can see far in the universe), you will learn how the largest black holes might change the fate of the galaxies they live in.\n",
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How to use this notebook (adapted from Gautham Narayan)\n",
+    "## Table of Contents\n",
+    "\n",
+    "* [Instruction Manual](#Instruction-Manual)\n",
+    "* [Activity 1: ](#Activity-1:-)\n",
+    "    * [Step 1.1: ](#Step-1.1:-)\n",
+    "    * [Step 1.2: ](#Step-1.2:-)\n",
+    "    * [Step 1.3: ](#Step-1.3:-)\n",
+    "    * [Step 1.4: ](#Step-1.4:-)\n",
+    "    * [Step 1.5: ](#Step-1.5:-)\n",
+    "* [Activity 2: ](#Activity-2:-)\n",
+    "    * [Step 2.1: ](#Step-2.1:-)\n",
+    "    * [Step 2.2: ](#Step-2.2:-)\n",
+    "    * [Step 2.3: ](#Step-2.3:-)\n",
+    "    * [Step 2.4: ](#Step-2.4:-)\n",
+    "    * [Step 2.5: ](#Step-2.5:-)\n",
+    "* [Activity 3: ](#Activity-3:-)\n",
+    "    * [Step 3.1: ](#Step-3.1:-)\n",
+    "    * [Step 3.2: ](#Step-3.2:-)\n",
+    "    * [Step 3.3: ](#Step-3.3:-)\n",
+    "    * [Step 3.4: ](#Step-3.4:-)\n",
+    "    * [Step 3.5: ](#Step-3.5:-)\n",
+    "* [Activity 4: ](#Activity-4:-)\n",
+    "    * [Step 4.1: ](#Step-4.1:-)\n",
+    "    * [Step 4.2: ](#Step-4.2:-)\n",
+    "    * [Step 4.3: ](#Step-4.3:-)\n",
+    "    * [Step 4.4: ](#Step-4.4:-)\n",
+    "    * [Step 4.5: ](#Step-4.5:-)\n",
+    "* [Activity 5: ](#Activity-5:-)\n",
+    "    * [Step 5.1: ](#Step-5.1:-)\n",
+    "    * [Step 5.2: ](#Step-5.2:-)\n",
+    "    * [Step 5.3: ](#Step-5.3:-)\n",
+    "    * [Step 5.4: ](#Step-5.4:-)\n",
+    "    * [Step 5.5: ](#Step-5.5:-)\n",
+    "* [Glossary](#Glossary)\n",
+    "* [Extras](#Extras)\n",
+    "* [Bibliography](#Bibliography)\n",
+    "* [Acknowledgements](#Acknowledgements)\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instruction Manual\n",
     "\n",
     "The webpage you are in is actually an app - much like you'd run on your cellphone. This app consists of cells. \n",
     "\n",
@@ -25,14 +70,17 @@
     "\n",
     "You <u><b>execute a cell with Shift+Enter</b></u> on the keyboard - this makes the computer execute your instructions. That's what this app does! \n",
     "\n",
-    "You can try it for yourself at https://try.jupyter.org/ outside of the cafe!"
+    "You can try it for yourself at https://try.jupyter.org/ outside of the cafe!\n",
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><font color='red'>Click into the cell below, read the comments on top, and hit Shift+Return to run the cell.</font></b>"
+    "<div class=\"alert alert-info\">\n",
+    "    <u><b>Tip:</b></u> Click anywhere inside of a cell to select it. Hit [Shift + Enter] to run a selected cell.\n",
+    "</div>"
    ]
   },
   {
@@ -120,16 +168,20 @@
     "\n",
     "Below, we will look at real data from the 3C 279 quasar in order to measure the size of a flare, and the amount of energy emitted during the flare.\n",
     "\n",
-    "### <b><font color='blue'>Q: How do you think astronomers measure the size of something that we cannot reach nor <i>zoom in</i> to observe in details?</font></b>\n",
+    "<div class=\"alert alert-success\">\n",
+    "    <u><b>Discussion Question:</b></u> How do you think astronomers measure the size of something that we cannot reach nor <i>zoom in</i> to observe in details?\n",
+    "    <br>\n",
+    "    <br>\n",
+    "    <u>Write your answer below and get ready to discuss with your partner.</u>\n",
+    "</div>\n",
     "\n",
-    "<b><font color='purple'>Write your answer below and get ready to discuss with your partner.</font></b>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b><font color='red'>Click into the cell below, read the comments on top, and hit Shift+Return to run the cell.</font></b>"
+    "```python\n",
+    "print(\"Enter your answer between the quotes, just like this.\")\n",
+    "```\n",
+    "\n",
+    "<div class=\"alert alert-danger\">\n",
+    "    <u><b>Tip:</b></u> Click anywhere inside of a cell to select it. Hit [Shift + Enter] to run a selected cell.\n",
+    "</div>"
    ]
   },
   {
@@ -153,10 +205,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n",
+    "# HAVE A GOOGLE FORM/SHEET. GLOBAL, NOT LOCAL BECAUSE NOT ALL SCHOOL DISTRICTS USE DRIVE\n",
+    "# SETTING UP A TEXTBOX WITH THE IMAGE SO THAT THE PARAMETERS ARE GIVEN AND THE GRAPH CAN BE COPY/PASTED\n",
+    "# SHOW AN OPTIONAL VIDEO (AS A LINK, NOT EMBEDDED)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<figure>\n",
-    "<img src=\"Figures/Stop_sign_grey.jpg\", align=\"center\", width=400>\n",
-    "<figcaption></figcaption>\n",
+    "    <img src=\"Figures/Stop_sign_grey.jpg\", align=\"center\", width=400>\n",
     "</figure>"
    ]
   },
@@ -327,30 +386,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The size of the Solar System is defined by the \"heliopause\", which is about 3 times further than the distance to Pluto. The heliopause is the balance point where the pressure from the solar wind is equivalent to that of the interstellar medium (the \"stuff\" between the stars)."
+    "# KEEP THE WIDGETS RATHER THAN DIVING INTO THE CODE"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <u><b>Activity 1: How big is the flare of 3C 279?</b></u>\n",
+    "##### The size of the Solar System is defined by the \"heliopause\", which is about 3 times further than the distance to Pluto. The heliopause is the balance point where the pressure from the solar wind is equivalent to that of the interstellar medium (the \"stuff\" between the stars)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Activity 1: How big is the flare of 3C 279?\n",
     "\n",
     "Now that we have seen that we can measure sizes with the light travel time, let's see how this applies to a flare from a quasar!\n",
     "\n",
-    "<br>\n",
     "<figure>\n",
-    "<img src=\"Figures/agnguide10a_flare_size.jpg\", align=\"center\", width=500>\n",
-    "<figcaption><b>Figure 5:</b> Illustration of the difference in light-travel time between the far-edge, middle, and near-edge of a source. If there were a sudden flash of light (a flare), the light would take more time to travel from the far side compared to the middle and near side of the object that has the flare. The difference in travel time between the far side and near side tells us how fast the total light can possibly vary (either rise to a peak, or drop back down to the normal level). In the artist illustration above, the radius (from center to one edge) takes one week in light travel time, so it has a maximum size of one <i>light-week</i>, which means 181.44 billion km. The diameter is two light-weeks, or 362.88 billion km.\n",
-    "</figcaption>\n",
-    "</figure>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b><font color='red'>Click into the cell below, read the comments on top, and hit Shift+Return to run the cell.</font></b>"
+    "    <br>\n",
+    "    <img src=\"Figures/agnguide10a_flare_size.jpg\", align=\"center\", width=500>\n",
+    "    <br>\n",
+    "    <figcaption><b>Figure 5:</b> Illustration of the difference in light-travel time between the far-edge, middle, and near-edge of a source. If there were a sudden flash of light (a flare), the light would take more time to travel from the far side compared to the middle and near side of the object that has the flare. The difference in travel time between the far side and near side tells us how fast the total light can possibly vary (either rise to a peak, or drop back down to the normal level). In the artist illustration above, the radius (from center to one edge) takes one week in light travel time, so it has a maximum size of one <i>light-week</i>, which means 181.44 billion km. The diameter is two light-weeks, or 362.88 billion km.\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "    <u><b>Tip:</b></u> Click anywhere inside of a cell to select it. Hit [Shift + Enter] to run a selected cell.\n",
+    "</div>"
    ]
   },
   {
@@ -452,9 +516,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# HIGHLIGHT \"ERROR BARS\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EXPLAIN HORIZONTAL VS VERTICAL ERROR BARS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <b><font color='blue'>Q: How long did the flare last?</font></b>\n",
     "\n",
     "Compute separately the <i>rising time</i>, and the <i>dropping time</i> by adjusting the sliders in the following graph. The graph will appear after initializing the next two cells."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Have sub-questions to get a student thinking (keep this in mind).\n",
+    "\n",
+    "Keep the same format, just add some extra text.\n",
+    "\n",
+    "(Keep everything the same).\n",
+    "\n",
+    "No, keep a textbox after every question."
    ]
   },
   {
@@ -521,6 +612,13 @@
     "In the graph above, the <font color='blue'>horizontal blue line</font> is the \"normal\" level. You will have to estimate when the flux starts rising to the peak, and when it goes back down to the normal level taking into account the error bars.\n",
     "\n",
     "After selecting the four values (rise_begin, rise_end, drop_begin, drop_end) write down your values on the post-its on the table and click on the next cell to preserve the values above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DO A PRINT STATEMENT, NOT POSTIT NOTE"
    ]
   },
   {
@@ -641,6 +739,13 @@
     "In this activity, we will calculate the energy emitted in the flare. First, you will read the flux from the graph, and the next steps will guide you through the conversion. We will compare to the energy of the Sun, and of an entire galaxy!\n",
     "\n",
     "### <b><font color='blue'>Q: How bright is the flare at maximum in terms of photon flux?</font></b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TYPE THIS AFTER QUESTION: \"Lets figure it out!\""
    ]
   },
   {
@@ -948,6 +1053,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# ADD ACKNOWLEDGEMENT OF MATT AND BERNARDO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## More on the flux, energy & luminosity calculations\n",
     "\n",
     "If we know the energy of each photon, we can convert the flux in number of photons per second per square meter area (the units above) to the <b>energy flux</b> in energy (electronVolt = eV) per second per square meter.\n",
@@ -958,10 +1070,32 @@
     "\n",
     "Below, we assume that each gamma ray hitting the detector has an energy of 1 GeV (= 1 billion eV), and calculate the maximum energy flux in $GeV m^{-2} s^{-1}$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FIGURE OUT THE ENDING OF CELL ABOVE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GENERAL COMMENTS:\n",
+    "# MAKE VOCABULARY WORDS A SINGLE, DIFFERENT COLOR. USE A DICTIONARY.\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MAKE A LEGEND OF COLORCODING ON TOP"
+   ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
