--- a/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
+++ b/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Our Vast Universe Probed with Big Data\n",
+    "# Our Vast Universe Probed with Big Data 2\n",
     "\n",
     "##### Written by Stephanie Juneau, NOAO (<mailto:sjuneau@noao.edu>), with contributions from Leah Fulmer & Gautham Narayan\n",
     "Last updated on 10/12/2018\n",
