New notebook introduction which will be used on all notebooks. Minor improvements to instruction throughout.

--- a/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
+++ b/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Our Vast Universe Probed with Big Data 2\n",
+    "# <u>Our Vast Universe Probed with Big Data</u>\n",
     "\n",
     "##### Written by Stephanie Juneau, NOAO (<mailto:sjuneau@noao.edu>), with contributions from Leah Fulmer & Gautham Narayan\n",
     "Last updated on 10/12/2018\n",
@@ -23,10 +23,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of Contents\n",
+    "# Table of Contents\n",
     "\n",
-    "* [Instruction Manual](#Instruction-Manual)\n",
-    "* [Activity 1: ](#Activity-1:-)\n",
+    "* [How to Use This Notebook](#How-to-Use-This-Notebook)\n",
+    "* [Pre-Activity Setup](#Pre-Activity-Setup)\n",
+    "* [Activity 1: How Far Away are Galaxies?](#Activity-1:-How-Far-Away-are-Galaxies?)\n",
     "    * [Step 1.1: ](#Step-1.1:-)\n",
     "    * [Step 1.2: ](#Step-1.2:-)\n",
     "    * [Step 1.3: ](#Step-1.3:-)\n",
@@ -67,32 +68,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instruction Manual\n",
+    "# How to Use This Notebook\n",
     "\n",
-    "The webpage you are in is actually an app - much like you'd run on your cellphone. This app consists of cells.\n",
+    "The webpage you are in is actually an app - much like the ones on your cellphone. This app consists of cells.\n",
     "\n",
-    "Each \"input\" cell (something with an \"In\" to the left) contains code - instructions to make the computer do something.\n",
+    "An *input* cell looks like a light grey box with an `In [ ]:` on its left. Input cells each contain code - instructions to make the computer do something.\n",
     "\n",
-    "To activate or select a cell, you first need to click on it.\n",
-    "\n",
-    "You <u>**execute a cell with Shift+Enter**</u> on the keyboard - this makes the computer execute your instructions. That's what this app does! \n",
-    "\n",
-    "You can <u>**modify the code by typing into the cell**</u> and then execute again the new code with Shift+Enter.\n",
-    "\n",
-    "You can try it for yourself at https://try.jupyter.org/\n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Activity 1: How Far Away are Galaxies?\n",
-    "\n",
-    "In this activity, you will learn how astronomers measure distances to galaxies. You will get to compare galaxies to figure out which ones are closer or further away from us. You can then use this method for many more galaxies on your own as well!\n",
+    "To activate or select a cell, click anywhere inside of it.\n",
     "\n",
     "<div class='alert alert-info'>\n",
-    "    <u><b>Tip:</b></u> Click anywhere inside of a cell to select it. Hit [Shift + Enter] to run a selected cell.\n",
+    "    Select the cell below and read its contents.\n",
     "</div>"
    ]
   },
@@ -102,8 +87,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ignore this stuff - it is to setup the plotting environment in your browser\n",
-    "# Just hit Shift + Enter here, and move on\n",
+    "# Text that follows a \"#\" is known as a comment.\n",
+    "# Comments do not affect your code in any way.\n",
+    "# You should always read the comments at the top of each cell you interact with.\n",
+    "# Comments will be used to describe what the cell's code is actually doing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To execute or run a selected cell, hit `[Shift + Enter]` on your keyboard.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    Select the cell below and read its contents. Then, run the cell.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text that DOESN'T follow a \"#\" is considered code.\n",
+    "# Lines of code are instructions given to your computer.\n",
+    "# The line of code below is a \"print\" statement.\n",
+    "# A print statement literally prints out the text between its quotes.\n",
+    "\n",
+    "print(\"Congrats! You have successfully run your first cell!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running a cell creates an *output* directly below it. An output can be some text, a graph, an interactive slider, or even nothing at all! For that last case, you know you have run a cell when the `In [ ]:` becomes `In [#]:`, where \"#\" is any number.\n",
+    "\n",
+    "You can try it for yourself at https://try.jupyter.org/\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pre-Activity Setup\n",
+    "\n",
+    "In order for any of the activities to work properly, you must import the libraries needed for the code in this notebook.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    Select and run the cell below.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here, you are importing the libraries needed for this notebook.\n",
+    "# These libraries set up the plotting environment in your browser.\n",
+    "\n",
     "%matplotlib notebook\n",
     "%pylab\n",
     "import matplotlib.path as mpath\n",
@@ -111,13 +157,24 @@
     "from astroML.plotting import MultiAxes\n",
     "from IPython.core.display import Image, display\n",
     "\n",
-    "print(\"\\033[4mHello\")"
+    "print(\"\\nDone! You have successfully imported the libraries.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Activity 1: How Far Away are Galaxies?\n",
+    "\n",
+    "In this activity, you will learn how astronomers measure distances to galaxies. You will get to compare galaxies to figure out which ones are closer or further away from us. You can then use this method for many more galaxies on your own as well!\n",
+    "\n",
     "As in the first notebook, we are going to use data from the [Sloan Digital Sky Survey (SDSS)](http://sdss.org). This project used a telescope at Apache Point in New Mexico to look at the northern sky.\n",
     "\n",
     "<figure>\n",
@@ -171,9 +228,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1.1: Plot a Reference Spectrum\n",
+    "## Step 1.1: Plot a Reference Spectrum\n",
     "\n",
-    "A reference spectrum means that it is at redshift zero (not moving toward or away from us). In this case, the reference spectrum is that of a single star."
+    "A reference spectrum means that it is at redshift zero (not moving toward or away from us). In this case, the reference spectrum is that of a single star.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <h3 class='alert-heading'>Helpful Reminder(s)</h3>\n",
+    "    <ul>\n",
+    "        <li>Click anywhere inside of a cell to select it.</li>\n",
+    "        <li>Hit [Shift + Enter] to run a selected cell.</li>\n",
+    "    </ul>\n",
+    "</div>"
    ]
   },
   {
@@ -209,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1.2: Plot a Galaxy Spectrum\n",
+    "## Step 1.2: Plot a Galaxy Spectrum\n",
     "\n",
     "Here, you will plot the spectrum of a galaxy. Notice if there are similarities and differences in its shape and lines relative to the reference spectrum."
    ]
@@ -256,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1.3: Measure Redshifts\n",
+    "## Step 1.3: Measure Redshifts\n",
     "\n",
     "The next step here is to overlay a reference spectrum (called a template) onto the galaxy spectra from above.\n",
     "\n",
@@ -406,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Activity 2: Look at the Position of Many Galaxies\n",
+    "# Activity 2: Look at the Position of Many Galaxies\n",
     "\n",
     "Similarly to using coordinates of latitude and longitude, the coordinates on the sky are defined onto a sphere. They are called RA (for Right Ascension) and Dec (for Declination). There are two illustrations below of these coordinate systems.\n",
     "\n",
@@ -443,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2.1: Selecting Galaxies in a Region of the Sky\n",
+    "## Step 2.1: Selecting Galaxies in a Region of the Sky\n",
     "\n",
     "Next, we will fetch the positions of galaxies on the sky, and plot their RA and Dec coordinates."
    ]
@@ -521,7 +586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2.2: Adding the 3rd Dimension\n",
+    "## Step 2.2: Adding the 3rd Dimension\n",
     "\n",
     "We saw before that in order to know the full distribution in 3D, we need to know how far away the galaxies are located. Here, we will add the information from the redshift.\n",
     "\n",
@@ -699,7 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2.3: Zooming In and Zooming Out\n",
+    "## Step 2.3: Zooming In and Zooming Out\n",
     "\n",
     "Now, we will repeat the plots from Step 2.2 above, but with a zoom on a smaller region (\"zooming in\"), and then over a larger region (\"zooming out\")."
    ]
