--- a/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
+++ b/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# <u>Our Vast Universe Probed with Big Data</u>\n",
+    "<font size='6'><b>Our Vast Universe Probed with Big Data</b></font>\n",
     "\n",
     "##### Written by Stephanie Juneau, NOAO (<mailto:sjuneau@noao.edu>), with contributions from Leah Fulmer & Gautham Narayan\n",
     "Last updated on 10/12/2018\n",
@@ -28,35 +28,16 @@
     "* [How to Use This Notebook](#How-to-Use-This-Notebook)\n",
     "* [Pre-Activity Setup](#Pre-Activity-Setup)\n",
     "* [Activity 1: How Far Away are Galaxies?](#Activity-1:-How-Far-Away-are-Galaxies?)\n",
-    "    * [Step 1.1: ](#Step-1.1:-)\n",
-    "    * [Step 1.2: ](#Step-1.2:-)\n",
-    "    * [Step 1.3: ](#Step-1.3:-)\n",
-    "    * [Step 1.4: ](#Step-1.4:-)\n",
-    "    * [Step 1.5: ](#Step-1.5:-)\n",
-    "* [Activity 2: ](#Activity-2:-)\n",
-    "    * [Step 2.1: ](#Step-2.1:-)\n",
-    "    * [Step 2.2: ](#Step-2.2:-)\n",
-    "    * [Step 2.3: ](#Step-2.3:-)\n",
-    "    * [Step 2.4: ](#Step-2.4:-)\n",
-    "    * [Step 2.5: ](#Step-2.5:-)\n",
-    "* [Activity 3: ](#Activity-3:-)\n",
-    "    * [Step 3.1: ](#Step-3.1:-)\n",
-    "    * [Step 3.2: ](#Step-3.2:-)\n",
-    "    * [Step 3.3: ](#Step-3.3:-)\n",
-    "    * [Step 3.4: ](#Step-3.4:-)\n",
-    "    * [Step 3.5: ](#Step-3.5:-)\n",
-    "* [Activity 4: ](#Activity-4:-)\n",
-    "    * [Step 4.1: ](#Step-4.1:-)\n",
-    "    * [Step 4.2: ](#Step-4.2:-)\n",
-    "    * [Step 4.3: ](#Step-4.3:-)\n",
-    "    * [Step 4.4: ](#Step-4.4:-)\n",
-    "    * [Step 4.5: ](#Step-4.5:-)\n",
-    "* [Activity 5: ](#Activity-5:-)\n",
-    "    * [Step 5.1: ](#Step-5.1:-)\n",
-    "    * [Step 5.2: ](#Step-5.2:-)\n",
-    "    * [Step 5.3: ](#Step-5.3:-)\n",
-    "    * [Step 5.4: ](#Step-5.4:-)\n",
-    "    * [Step 5.5: ](#Step-5.5:-)\n",
+    "    * [Step 1.1: Plot a Reference Spectrum](#Step-1.1:-Plot-a-Reference-Spectrum)\n",
+    "    * [Step 1.2: Plot a Galaxy Spectrum](#Step-1.2:-Plot-a-Galaxy-Spectrum)\n",
+    "    * [Step 1.3: Measure Redshifts](#Step-1.3:-Measure-Redshifts)\n",
+    "    * [Step 1.4: Mystery Galaxy](#Step-1.4:-Mystery-Galaxy)\n",
+    "    * [Step 1.5: Redshift Ruler](#Step-1.5:-Redshift-Ruler)\n",
+    "* [Activity 2: Look at the Position of Many Galaxies](#Activity-2:-Look-at-the-Position-of-Many-Galaxies)\n",
+    "    * [Step 2.1: Selecting Galaxies in a Region of the Sky](#Step-2.1:-Selecting-Galaxies-in-a-Region-of-the-Sky)\n",
+    "    * [Step 2.2: Adding the 3rd Dimension](#Step-2.2:-Adding-the-3rd-Dimension)\n",
+    "    * [Step 2.3: Zooming In and Zooming Out](#Step-2.3:-Zooming-In-and-Zooming-Out)\n",
+    "    * [Step 2.4: Plot Full Sample over Sky Projection](#Step-2.4:-Plot-Full-Sample-over-Sky-Projection)\n",
     "* [Glossary](#Glossary)\n",
     "* [Extras](#Extras)\n",
     "* [Bibliography](#Bibliography)\n",
@@ -77,7 +58,7 @@
     "To activate or select a cell, click anywhere inside of it.\n",
     "\n",
     "<div class='alert alert-info'>\n",
-    "    Select the cell below and read its contents.\n",
+    "    <font size='3'><b>Select the cell below and read its contents.</b></font>\n",
     "</div>"
    ]
   },
@@ -100,7 +81,7 @@
     "To execute or run a selected cell, hit `[Shift + Enter]` on your keyboard.\n",
     "\n",
     "<div class='alert alert-info'>\n",
-    "    Select the cell below and read its contents. Then, run the cell.\n",
+    "    <font size='3'><b>Select the cell below and read its contents. Then, run the cell.</b></font>\n",
     "</div>"
    ]
   },
@@ -124,7 +105,7 @@
    "source": [
     "Running a cell creates an *output* directly below it. An output can be some text, a graph, an interactive slider, or even nothing at all! For that last case, you know you have run a cell when the `In [ ]:` becomes `In [#]:`, where \"#\" is any number.\n",
     "\n",
-    "You can try it for yourself at https://try.jupyter.org/\n",
+    "You can learn more about how Jupyter notebooks work at https://try.jupyter.org/\n",
     "___"
    ]
   },
@@ -137,7 +118,7 @@
     "In order for any of the activities to work properly, you must import the libraries needed for the code in this notebook.\n",
     "\n",
     "<div class='alert alert-info'>\n",
-    "    Select and run the cell below.\n",
+    "    <font size='3'><b>Select and run the cell below.</b></font>\n",
     "</div>"
    ]
   },
@@ -156,6 +137,14 @@
     "from astroML.datasets import fetch_sdss_spectrum, fetch_vega_spectrum, fetch_sdss_S82standards\n",
     "from astroML.plotting import MultiAxes\n",
     "from IPython.core.display import Image, display\n",
+    "\n",
+    "# Code that we will need to fetch galaxies' coordinates\n",
+    "from astroML.datasets import fetch_sdss_specgals\n",
+    "import matplotlib.cm as cm\n",
+    "\n",
+    "# For 3D Plotting:\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
     "print(\"\\nDone! You have successfully imported the libraries.\")"
    ]
@@ -180,11 +169,14 @@
     "<figure>\n",
     "    <center>\n",
     "        <br>\n",
-    "        <img src='https://apod.nasa.gov/apod/image/9806/sloan_fermilab_big.jpg', width=300>\n",
+    "        <img src='https://apod.nasa.gov/apod/image/9806/sloan_fermilab_big.jpg', width='300'>\n",
     "        <br>\n",
     "        <figcaption>\n",
     "            <font color='grey'>\n",
-    "The Sloan Telescope at Apache Point, New Mexico. <b>Image Credit:</b> SDSS Team, Fermilab Visual Media Services.\n",
+    "                <b>Figure 1:</b>\n",
+    "                The Sloan Telescope at Apache Point, New Mexico.\n",
+    "                <b>Image Credit:</b>\n",
+    "                SDSS Team, Fermilab Visual Media Services.\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -197,11 +189,14 @@
     "<figure>\n",
     "    <center>\n",
     "        <br>\n",
-    "        <img src='http://www.nature.com/polopoly_fs/7.2192.1325671958!/image/Dark-Energy.jpg_gen/derivatives/fullsize/Dark-Energy.jpg', width=300>\n",
+    "        <img src='http://www.nature.com/polopoly_fs/7.2192.1325671958!/image/Dark-Energy.jpg_gen/derivatives/fullsize/Dark-Energy.jpg', width='300'>\n",
     "        <br>\n",
     "        <figcaption>\n",
     "            <font color='grey'>\n",
-    "Holes in aluminum plates let the light from stars and galaxies passed to an optical fiber to the instrument. <b>Image credit:</b> D. Long, SDSS-III\n",
+    "                <b>Figure 2:</b>\n",
+    "                Holes in aluminum plates let the light from stars and galaxies passed to an optical fiber to the instrument.\n",
+    "                <b>Image credit:</b>\n",
+    "                D. Long, SDSS-III\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -210,11 +205,12 @@
     "<figure>\n",
     "    <center>\n",
     "        <br>\n",
-    "        <img src='http://newscenter.lbl.gov/wp-content/uploads/sites/2/2008/09/schlegel.jpg', width=300>\n",
+    "        <img src='http://newscenter.lbl.gov/wp-content/uploads/sites/2/2008/09/schlegel.jpg', width='300'>\n",
     "        <br>\n",
     "        <figcaption>\n",
     "            <font color='grey'>\n",
-    "David Schlegel, Principal Investigator of the BOSS survey (follow-up to SDSS), holding one fiber plug plate.\n",
+    "                <b>Figure 3:</b>\n",
+    "                David Schlegel, Principal Investigator of the BOSS survey (follow-up to SDSS), holding one fiber plug plate.\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -249,6 +245,7 @@
    "source": [
     "# Fetch single spectrum - Enter the same \"Plate\", \"MJD\" and \"Fiber\" numbers here\n",
     "# Then hit Shift+Enter\n",
+    "\n",
     "plate = 396\n",
     "mjd = 51816\n",
     "fiber = 605\n",
@@ -287,6 +284,7 @@
    "source": [
     "# Fetch the first galaxy spectrum\n",
     "# Then hit Shift+Enter\n",
+    "\n",
     "plate = 2434\n",
     "mjd = 53826\n",
     "fiber = 359\n",
@@ -325,7 +323,7 @@
     "\n",
     "The next step here is to overlay a reference spectrum (called a template) onto the galaxy spectra from above.\n",
     "\n",
-    "> <u><b>Reminder:</b></u> A galaxy is a collection of billion of stars, so the shape of the spectrum is not identical to the reference spectrum of a single star. But because the stars have the same elements, notice similar \"dips\" in the spectra."
+    "> <u><b>Remember:</b></u> A galaxy is a collection of billion of stars, so the shape of the spectrum is not identical to the reference spectrum of a single star. But because the stars have the same elements, notice similar \"dips\" in the spectra."
    ]
   },
   {
@@ -337,6 +335,7 @@
     "# redshift value (0 for a star, and upward for distant galaxies e.g.: \n",
     "# z = 0.01, 0.02, 0.05, ... 0.1, 0.2, ... 1.0)\n",
     "# First run this cell with zero redshift, and then adjust the value.\n",
+    "\n",
     "z1 = 0.\n",
     "\n",
     "# now, we can plot the reference spectrum (at redshift=0)\n",
@@ -369,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MYSTERY Galaxy\n",
+    "## Step 1.4: Mystery Galaxy\n",
     "\n",
     "Each group will receive the information to fetch a different spectrum of a mystery galaxy. This information will be on a piece of paper and contains PLATE, MJD, FIBER and NORM numbers. Enter these numbers in the cell below to measure the redshift (like you did above) for a new galaxy. If you do not get a piece of paper, simply use the numbers that are pre-entered below."
    ]
@@ -382,7 +381,7 @@
    "source": [
     "# Now we do it again for a NEW galaxy!\n",
     "\n",
-    "# Replace the plate, mjd, fiber and norm with the numbers you received, \n",
+    "# Replace the plate, mjd, fiber and norm with the numbers you received.\n",
     "# Then hit Shift+Enter\n",
     "\n",
     "## Mystery galaxy\n",
@@ -436,21 +435,21 @@
    "source": [
     "<div class='alert alert-warning'>\n",
     "    <h3 class='alert-heading'>Discussion Question(s)</h3>\n",
-    "    <ol>\n",
-    "        <li>Which galaxy is closer to us?</li>\n",
-    "        <li>Further away from us?</li>\n",
-    "    </ol>\n",
+    "    <ul>\n",
+    "        <li>Which galaxy is closer to us and why?</li>\n",
+    "    </ul>\n",
     "</div>\n",
     "\n",
     "Now, let's check the redshift and learn more information about those two galaxies. [Click this link.](http://cas.sdss.org/dr14/en/tools/explore/Summary.aspx) Click on \"Search\" on the left hand side menu bar, and then enter the \"Plate\", \"Fiber\" and \"MJD\" for one galaxy at a time, and hit \"Go\".\n",
-    "If you click on the image, you can move around, zoom in and out - it's like Google Maps for the night sky!"
+    "If you click on the image, you can move around, zoom in and out - it's like Google Maps for the night sky!\n",
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Redshift Ruler\n",
+    "## Step 1.5: Redshift Ruler\n",
     "\n",
     "Each group had a different mystery galaxy. Let's see how far away they are compared with each other by placing them on the \"redshift ruler\" on the white board at the front of the room (if applicable)."
    ]
@@ -459,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What's next?\n",
+    "### What's next?\n",
     "\n",
     "Well done! You have measured redshifts for two galaxies, which is how astronomers determine distances to galaxies. Remember, the further away a galaxy is from us, the faster is seems to be moving away from us, and the more its light (spectrum) is redshifted! That's because the universe is expanding.\n",
     "\n",
@@ -478,11 +477,16 @@
     "<figure>\n",
     "    <center>\n",
     "        <br>\n",
-    "        <img src='http://voyages.sdss.org/wp-content/uploads/2015/10/pre-flight-celestial-sphere.jpg', width=300>\n",
+    "        <img src='http://voyages.sdss.org/wp-content/uploads/2015/10/pre-flight-celestial-sphere.jpg', width='300'>\n",
     "        <br>\n",
     "        <figcaption>\n",
     "            <font color='grey'>\n",
-    "Illustration of the celestial coordinate system with RA and Dec. You can read <a href=http://dev.skyserver.sdss3.org/voyages/pre-flight/ra-and-dec.aspx>here</a> for an explanation by the SDSS team.\n",
+    "                <b>Figure 4:</b>\n",
+    "                Illustration of the celestial coordinate system with RA and Dec. You can read\n",
+    "                <a href='http://dev.skyserver.sdss3.org/voyages/pre-flight/ra-and-dec.aspx'>\n",
+    "                    here\n",
+    "                </a>\n",
+    "                for an explanation by the SDSS team.\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -491,11 +495,20 @@
     "<figure>\n",
     "    <center>\n",
     "        <br>\n",
-    "        <img src='https://upload.wikimedia.org/wikipedia/commons/9/98/Ra_and_dec_on_celestial_sphere.png', width=300>\n",
+    "        <img src='https://upload.wikimedia.org/wikipedia/commons/9/98/Ra_and_dec_on_celestial_sphere.png', width='300'>\n",
     "        <br>\n",
     "        <figcaption>\n",
     "            <font color='grey'>\n",
-    "Illustration of the celestial coordinate system with RA and Dec. You can read on Wikipedia about <a href=https://en.wikipedia.org/wiki/Right_ascension>Right Ascension</a> and <a href=https://en.wikipedia.org/wiki/Declination>Declination</a>.\n",
+    "                <b>Figure 5:</b>\n",
+    "                Illustration of the celestial coordinate system with RA and Dec. You can read on Wikipedia about\n",
+    "                <a href='https://en.wikipedia.org/wiki/Right_ascension'>\n",
+    "                    Right Ascension\n",
+    "                </a>\n",
+    "                and\n",
+    "                <a href='https://en.wikipedia.org/wiki/Declination'>\n",
+    "                    Declination\n",
+    "                </a>\n",
+    "                .\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -519,11 +532,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Code that we will need to fetch galaxies' coordinates\n",
+    "# Code that we will need to fetch galaxies' coordinates\n",
     "from astroML.datasets import fetch_sdss_specgals\n",
     "import matplotlib.cm as cm\n",
     "\n",
-    "#For 3D Plotting:\n",
+    "# For 3D Plotting:\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D"
    ]
@@ -592,7 +605,7 @@
     "\n",
     "> <u><b>Remember:</b></u> The larger the redshift, the further away the galaxy!\n",
     "\n",
-    "First, we will plot all galaxies in red, and show galaxies that have approximately the same redshift in black. In this first example, we will select for values of redshift between z=0.10 and z=0.12. This is done by computing galaxies in a window of -0.01 and +0.1 around z=0.11 (since 0.11-0.01=0.10 and 0.11+0.01=0.12). We call this an interval of redshift."
+    "First, we will plot all galaxies in red, and show galaxies that have approximately the same redshift in black. In this first example, we will select for values of redshift between $z=0.10$ and $z=0.12$. This is done by computing galaxies in a window of $-0.01$ and $+0.1$ around $z=0.11$ (since $0.11-0.01=0.10$ and $0.11+0.01=0.12$). We call this an interval of redshift."
    ]
   },
   {
@@ -635,14 +648,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, instead of showing just one interval of redshift in black, we will show the redshift of each galaxy color-coded. Each galaxy is shown with a dot, and each dot will have a color corresponding to the redshift: purple/blue colors mean a low redshift like between 0-0.05, then green/yellow mean slightly higher redshift like 0.1, and so on until the higher redshift shown here of 0.2 in red. Remember that this means that points with exactly the same color are at the same distance from us!"
+    "Now, instead of showing just one interval of redshift in black, we will show the redshift of each galaxy color-coded. Each galaxy is shown with a dot, and each dot will have a color corresponding to the redshift: purple/blue colors mean a low redshift like between $0$-$0.05$, then green/yellow mean slightly higher redshift like $0.1$, and so on until the higher redshift shown here of $0.2$ in red. Remember that this means that points with exactly the same color are at the same distance from us!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -691,7 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, you will make a 3D version of the above 2D plot (same dots but in 3D). You may need to execute the cell twice."
+    "Next, you will make a 3D version of the above 2D plot (same dots but in 3D)."
    ]
   },
   {
@@ -869,8 +882,7 @@
     "<div class='alert alert-success'>\n",
     "    <h3 class='alert-heading'>Quick Question(s)</h3>\n",
     "    <ul>\n",
-    "        <li>What do see?</li>\n",
-    "        <li>Any interesting galaxy structures?</li>\n",
+    "        <li>Do you see any interesting galaxy structures?</li>\n",
     "        <li>What galaxy structures are closer/further from you?</li>\n",
     "    </ul>\n",
     "</div>\n",
@@ -956,7 +968,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bonus: Plot Full Sample over Sky Projection\n",
+    "## Step 2.4: Plot Full Sample over Sky Projection\n",
     "\n",
     "Below, we will again plot the positions of galaxies, and include the information on redshift as the color (but with a different color scheme).\n",
     "\n",
@@ -1014,12 +1026,12 @@
    "metadata": {},
    "source": [
     "# GENERAL COMMENTS:\n",
-    "# HAVE BACKGROUND TUCSON IMAGES WHEN SHOWING A PATCH OF THE SKY\n",
-    "# INCORPORATE STELLARIUM TO KNOW WHERE THE PATCH OF SKY IS\n",
-    "# BETTER EXPLANATIONS OF REDSHIFT\n",
-    "# CONDENSE DOWN THE QUESTIONS\n",
-    "# WHY ARE THERE GAPS BETWEEN THE REDS AND THE BLUES\n",
-    "***"
+    "* HAVE BACKGROUND TUCSON IMAGES WHEN SHOWING A PATCH OF THE SKY\n",
+    "* INCORPORATE STELLARIUM TO KNOW WHERE THE PATCH OF SKY IS\n",
+    "* BETTER EXPLANATIONS OF REDSHIFT\n",
+    "* CONDENSE DOWN THE QUESTIONS\n",
+    "* WHY ARE THERE GAPS BETWEEN THE REDS AND THE BLUES\n",
+    "___"
    ]
   },
   {
