Implemented same beginning format as Large Scale notebook.

--- a/_06_Black_Holes/Black_Holes.ipynb
+++ b/_06_Black_Holes/Black_Holes.ipynb
@@ -16,9 +16,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of Contents\n",
+    "# Table of Contents\n",
     "\n",
-    "* [Instruction Manual](#Instruction-Manual)\n",
+    "* [How to Use This Notebook](#How-to-Use-This-Notebook)\n",
+    "* [Pre-Activity Setup](#Pre-Activity-Setup)\n",
     "* [Activity 1: ](#Activity-1:-)\n",
     "    * [Step 1.1: ](#Step-1.1:-)\n",
     "    * [Step 1.2: ](#Step-1.2:-)\n",
@@ -30,25 +31,6 @@
     "    * [Step 2.2: ](#Step-2.2:-)\n",
     "    * [Step 2.3: ](#Step-2.3:-)\n",
     "    * [Step 2.4: ](#Step-2.4:-)\n",
-    "    * [Step 2.5: ](#Step-2.5:-)\n",
-    "* [Activity 3: ](#Activity-3:-)\n",
-    "    * [Step 3.1: ](#Step-3.1:-)\n",
-    "    * [Step 3.2: ](#Step-3.2:-)\n",
-    "    * [Step 3.3: ](#Step-3.3:-)\n",
-    "    * [Step 3.4: ](#Step-3.4:-)\n",
-    "    * [Step 3.5: ](#Step-3.5:-)\n",
-    "* [Activity 4: ](#Activity-4:-)\n",
-    "    * [Step 4.1: ](#Step-4.1:-)\n",
-    "    * [Step 4.2: ](#Step-4.2:-)\n",
-    "    * [Step 4.3: ](#Step-4.3:-)\n",
-    "    * [Step 4.4: ](#Step-4.4:-)\n",
-    "    * [Step 4.5: ](#Step-4.5:-)\n",
-    "* [Activity 5: ](#Activity-5:-)\n",
-    "    * [Step 5.1: ](#Step-5.1:-)\n",
-    "    * [Step 5.2: ](#Step-5.2:-)\n",
-    "    * [Step 5.3: ](#Step-5.3:-)\n",
-    "    * [Step 5.4: ](#Step-5.4:-)\n",
-    "    * [Step 5.5: ](#Step-5.5:-)\n",
     "* [Glossary](#Glossary)\n",
     "* [Extras](#Extras)\n",
     "* [Bibliography](#Bibliography)\n",
@@ -60,26 +42,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instruction Manual\n",
+    "# How to Use This Notebook\n",
     "\n",
-    "The webpage you are in is actually an app - much like you'd run on your cellphone. This app consists of cells. \n",
+    "The webpage you are in is actually an app - much like the ones on your cellphone. This app consists of cells.\n",
     "\n",
-    "Each \"input\" cell (something with an \"In\" to the left) contains code, or instructions to make the computer do something.\n",
+    "An *input* cell looks like a light grey box with an `In [ ]:` on its left. Input cells each contain code - instructions to make the computer do something.\n",
     "\n",
-    "You can <u><b>modify the code by typing into the cell when specified.</b></u>\n",
+    "To activate or select a cell, click anywhere inside of it.\n",
     "\n",
-    "You <u><b>execute a cell with Shift+Enter</b></u> on the keyboard - this makes the computer execute your instructions. That's what this app does! \n",
-    "\n",
-    "You can try it for yourself at https://try.jupyter.org/ outside of the cafe!\n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\">\n",
-    "    <u><b>Tip:</b></u> Click anywhere inside of a cell to select it. Hit [Shift + Enter] to run a selected cell.\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select the cell below and read its contents.</b></font>\n",
     "</div>"
    ]
   },
@@ -89,11 +61,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Text that follows a '#' is known as a comment.\n",
+    "# Text that follows a \"#\" is known as a comment.\n",
     "# Comments do not affect your code in any way.\n",
-    "# Run this cell (Shift+Enter) to compile the software that we will use for our activity.\n",
+    "# You should always read the comments at the top of each cell you interact with.\n",
+    "# Comments will be used to describe what the cell's code is actually doing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To execute or run a selected cell, hit `[Shift + Enter]` on your keyboard.\n",
     "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select the cell below and read its contents. Then, run the cell.</b></font>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text that DOESN'T follow a \"#\" is considered code.\n",
+    "# Lines of code are instructions given to your computer.\n",
+    "# The line of code below is a \"print\" statement.\n",
+    "# A print statement literally prints out the text between its quotes.\n",
     "\n",
+    "print(\"Congrats! You have successfully run your first cell!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running a cell creates an *output* directly below it. An output can be some text, a graph, an interactive slider, or even nothing at all! For that last case, you know you have run a cell when the `In [ ]:` becomes `In [#]:`, where \"#\" is any number.\n",
+    "\n",
+    "You can learn more about how Jupyter notebooks work at https://try.jupyter.org/\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pre-Activity Setup\n",
+    "\n",
+    "In order for any of the activities to work properly, you must import the libraries needed for the code in this notebook.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select and run the cell below.</b></font>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here, you are importing the libraries needed for this notebook.\n",
+    "# These libraries set up the plotting environment in your browser.\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -107,7 +136,14 @@
     "from IPython.display import display\n",
     "from ipywidgets import interactive, interact, FloatSlider\n",
     "\n",
-    "print(\"Nice work! A cell's output always shows up directly below it.\")"
+    "print(\"\\nDone! You have successfully imported the libraries.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
